main.css
* {
    font-family: "GDS Transport",arial,sans-serif;
    touch-action: manipulation;

}

body {
    margin: 0;
}


/* Navigation Bar Start */
a {
    text-decoration: none;
    color: #1d70b8;
    font-size: 2vw;
    font-weight: bold;
    margin: 0;
    padding: 0;
}

a:hover {
    color: #003078;
}

li {
    margin: 0;
    padding: 0;
    list-style-type: none;
    flex-grow: 1;
    flex-basis: 0;
}

header {
    display: flex;
    flex-direction: column;
}

header p {
    font-size: 5vw;
    margin: 0;
    padding: 0.25rem 4rem 0.25rem 4rem;
    font-weight: bold;
    color: white;
    background-color: black;
}
ul {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    column-gap: 1rem;

}

nav {
    border-top: 0.5rem solid #1d70b8;
    border-bottom: 0.1rem solid black;
    color:black;
    background-color: #f3f2f1;
    padding: 0 4rem 0 4rem;
}
/* Navigation Bar end */



#main-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 0.5rem;
    margin-left: 4rem;
    margin-right: 4rem;
}

#step-1-totals {
    display: flex;
    column-gap: 1rem;
    justify-content: center;

}

.counters-group {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    row-gap: 1rem;
    column-gap: 1rem;
}

.counters-single {
    display: flex;
    flex-direction: column;
    border: 0.1rem solid black;
    padding: 0.25rem;
    width: 15rem;
    background-color: #1d70b884;
}



.count-group {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    column-gap: 1rem;
    /* width: 15rem; */
}

.count {
    text-align: center;
}

button.count {
    /* background-color: #1d70b800 !important; */
    border: dotted;
    flex-grow: 1;
    flex-basis: 0;

}

button.count:active {
    background-color: #1d70b884;
}


.keystroke-field {
    color: white;
}

input::placeholder {
    color: #555;
    font-size: 12px;
    font-weight: bold;
    text-align: center;
}

.keystroke-field:focus {
    background-color: yellow;
    color:yellow;
}

#step2 {
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
    flex-wrap: wrap;

}

